[tool.poetry]
name = "db-case"
version = "0.1.0"
description = "Implementation of business logic for challenge questions"
authors = ["Davi S.P. <davisp2009@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
poethepoet = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
tests = "pytest -s -vv --capture=no --log-cli-level=INFO --failed-first -x --cov-report term-missing --cov=. tests"
